# curie

./: .gitignore  INSTALL.md  README.md  biome.json  index.html  install.sh  lefthook.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
assets/brand/: generate-icon.mjs
scripts/: release.mjs
src/: App.tsx  i18n.test.ts  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri-signing.key.pub  tauri.conf.json
src-tauri/examples/: check.rs  install.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  update.rs
src-tauri/src/node/: detect.rs  install.rs  mod.rs
src-tauri/src/skills/: add.rs  check.rs  custom.rs  explore.rs  find.rs  list.rs  lock.rs  mod.rs  npx.rs  remove.rs  types.rs  update.rs
src/components/: ActionProgress.tsx  AppShell.tsx  Button.test.tsx  Button.tsx  ChoiceButton.tsx  ConfirmDialog.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorFallback.tsx  FullPageError.tsx  FullPageLoading.tsx  Header.tsx  Home.tsx  IconButton.tsx  Input.tsx  Label.tsx  MainContent.tsx  NavItem.tsx  Placeholder.tsx  RoutedPages.tsx  Setup.tsx  Sidebar.tsx  StatusBar.tsx  Toaster.tsx  types.ts
src/i18n/: en.json  es.json
src/lib/: boot.test.tsx  boot.ts  cn.test.ts  cn.ts  meta.ts  motion.test.ts  motion.ts  persistence.ts  skills.test.ts  skills.ts  transition.tsx  useAsymptoticProgress.ts
src/pages/: Home.tsx  Installed.tsx  Settings.tsx  Setup.tsx
src/store/: app.ts  find.ts  skills.test.ts  skills.ts  system.test.ts  system.ts  ui.test.ts  ui.ts  (+1 more)
tests/: i18n.test.ts
(+103 files in other folders)
