[package]
name = "curie"
version = "0.1.0"
description = "Native manager for agent skills."
authors = ["curie"]
edition = "2021"

[lib]
name = "curie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
which = "7"
dirs = "5"
ureq = { version = "2.12", features = ["json"] }
